--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,35 @@
   color: #61dafb;
 }
 
+.img-comp-container {
+  position: relative;
+  height: 200px; /*должен быть такой же высоты, как и изображения*/
+}
+
+.img-comp-img {
+  position: absolute;
+  width: auto;
+  height: auto;
+  overflow:hidden;
+}
+
+.img-comp-img img {
+  display:block;
+  vertical-align:middle;
+}
+
+.img-comp-slider {
+  position: absolute;
+  z-index:9;
+  cursor: ew-resize;
+  /*установите внешний вид ползунка:*/
+  width: 40px;
+  height: 40px;
+  background-color: #2196F3;
+  opacity: 0.7;
+  border-radius: 50%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
